# web-content-downloader

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: python-test.yml
app/: app.py
app/templates/: home.html
src/youtube-web-downloader/app/: .env.dev  app.py
src/youtube_web_downloader/: __main__.py
src/youtube_web_downloader/app/: _utils.py  app.py  previous_list.py
src/youtube_web_downloader/app/templates/: home.html  previous_downloads.html  set_track_info.html
tests/unit/: test_app.py
